--- a/PicToSketch/Info.plist
+++ b/PicToSketch/Info.plist
@@ -2,6 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>ko</string>
+	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SDMiSaeng.ttf</string>
+		<string>BerkshireSwash-Regular.ttf</string>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow Camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
