--- a/PicToSketch/Info.plist
+++ b/PicToSketch/Info.plist
@@ -2,9 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>라이브러리에서 선택한 사진 변환 및 저장 기능을 사용하기 위해서는 라이브러리 접근 권한 허용이 필요합니다.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라로 촬영한 사진 변환 기능을 사용하기 위해서는 카메라 접근 권한 허용이 필요합니다.</string>
 	<key>CFBundleLocalizations</key>
 	<array>
-		<string>en</string>
 		<string>ko</string>
 	</array>
 	<key>UIAppFonts</key>
@@ -12,10 +15,6 @@
 		<string>SDMiSaeng.ttf</string>
 		<string>BerkshireSwash-Regular.ttf</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow Camera</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Allow Photos</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
